# genome-rag

./: .gitignore  README.md  pseudocode.md  pyproject.toml  schema.prisma
genome_rag/: Genotype.py  Genotypes.py  GenotypesFile.py  __main__.py  app.py
genome_rag/genotypes/: GenotypesFile.py
genome_rag/llm/: LLM.py
genome_rag/snpedia/: VectorDB.py  scrape_snpedia_and_add.py  snpedia.py
notebooks/: chat.py  mwparser.py  search.py  snpedia_test.py  test_genotype_utils.py  vectordb.py
